<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_3"
    tools:context=".page_aboutFragment">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/logo_2" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/space"
        android:layout_marginBottom="10dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/bg_3"
            app:cardCornerRadius="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/card_title_saya"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/card_title_saya"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>

                <View
                    android:id="@+id/space"
                    android:layout_below="@id/card_title_saya"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/space">
                </View>

                <ImageView
                    android:id="@+id/img_saya"
                    android:layout_below="@+id/card_title_saya"
                    android:layout_width="130dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginHorizontal="125dp"
                    android:src="@drawable/me"/>

                <TextView
                    android:id="@+id/card_content_saya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/img_saya"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/text_content_saya"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/card_title_contactme"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contactme"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/space">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/nohp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/card_title_appinfo"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/space">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/version"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>