<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".page_homeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/bg_3"
            android:gravity="center_horizontal">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/logo_2" />

            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/space">
            </View>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_saya"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_title_saya"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <ImageView
                        android:id="@+id/img_saya"
                        android:layout_below="@+id/card_title_saya"
                        android:layout_width="130dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="120dp"
                        android:src="@drawable/me"/>

                    <TextView
                        android:id="@+id/card_content_saya"
                        android:layout_below="@+id/img_saya"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_content_saya"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_hobby"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_title_hobby"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:id="@+id/layout_view_img"
                        android:layout_below="@+id/card_title_hobby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_prev_card_hobby"
                            android:layout_width="40dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:text="@string/prev"
                            android:textColor="@color/black"
                            android:textSize="10sp"/>

                        <ImageView
                            android:id="@+id/img_hobby"
                            android:layout_width="180dp"
                            android:layout_height="110dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginHorizontal="20dp" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_next_card_hobby"
                            android:layout_width="40dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:text="@string/next"
                            android:textColor="@color/black"
                            android:textSize="10sp"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/card_content_hobby"
                        android:layout_below="@+id/layout_view_img"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_content_hobby"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_makes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/card_title_makes"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/img_ayam"
                        android:layout_below="@+id/card_title_makes"
                        android:layout_width="180dp"
                        android:layout_height="110dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginHorizontal="95dp"
                        android:src="@drawable/ayam_goreng"/>

                    <TextView
                        android:id="@+id/card_content_makes"
                        android:layout_below="@+id/img_ayam"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_content_makes"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/bg_4"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/card_title_mikes"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/card_title_mikes"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:id="@+id/layout_view_img_minum"
                        android:layout_below="@+id/card_title_mikes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_prev_card_mikes"
                            android:layout_width="40dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:text="@string/prev"
                            android:textColor="@color/black"
                            android:textSize="10sp"/>

                        <ImageView
                            android:id="@+id/img_mikes"
                            android:layout_width="180dp"
                            android:layout_height="110dp"
                            android:layout_marginTop="17dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginHorizontal="20dp" />


                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_next_card_mikes"
                            android:layout_width="40dp"
                            android:layout_height="45dp"
                            android:layout_marginTop="45dp"
                            android:background="@drawable/btn_card_hobby"
                            android:text="@string/next"
                            android:textColor="@color/black"
                            android:textSize="10sp"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/card_content1_mikes"
                        android:layout_below="@+id/layout_view_img_minum"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_content1_mikes"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/card_content2_mikes"
                        android:layout_below="@+id/layout_view_img_minum"
                        android:layout_toRightOf="@+id/card_content1_mikes"
                        android:layout_margin="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_content2_mikes"
                        android:textSize="15sp"
                        android:textColor="@color/black"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>